[package]
name = "netgauze-bgp-pkt"
version = "0.1.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BGP-4 Protocol representation and serde.
"""
keywords = ["bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

build = "build.rs"

[build-dependencies]
cargo-c = "0.9.24"
capi-gen = { path = "../capi-gen" }

[dependencies]
netgauze-iana = { version = "0.1.0", path = "../iana" }
netgauze-locate = { version = "0.1.0", path = "../locate", optional = true }
netgauze-parse-utils = { version = "0.1.0", path = "../parse-utils", optional = true }
netgauze-serde-macros = { version = "0.1.0", path = "../serde-macros", optional = true }
ipnet = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nom = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
criterion = { workspace = true, optional = true } # Dev dep for bench
arbitrary = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
bytes = { version = "1.5.0", features = [] }
paste = "1.0.14"
syn = "2.0.33"
capi-gen = { path = "../capi-gen" }

[features]
default = ["serde"]
serde = ["nom", "byteorder", "netgauze-locate", "netgauze-parse-utils", "netgauze-serde-macros"]
bench = ["criterion"]
fuzz = ["arbitrary"]
capi = ["libc"]


[dev-dependencies]
netgauze-parse-utils = { version = "0.1.0", path = "../parse-utils", features = ["test-helpers"] }
serde_json = { workspace = true }


[[bench]]
name = "serde_benchmark"
harness = false
required-features = ["bench"]
